AOT code root scanning shows in the wrong position in the logs

XMLWordPrintable

    • gc
    • 9
    • b09

      AOT code root scanning introduced in JDK-8171008 shows up in the wrong location in the log - it is shown as second-level work (e.g. same as Ext Root Scan, Object Copy, ...) but in fact is part of "Ext Root Scan".

      It should be shown as such.

            Assignee:
            Thomas Schatzl
            Reporter:
            Thomas Schatzl
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: