8218672: AOT code root scanning shows in the wrong position in the logs

Reviewed-by: lkorinth, kbarrett